Fixes for find bugs Redacted threads as testing showed no notable performance once search bug had been found.
Former-commit-id: d4d5fdf97ce81daea6cb8587d58d7699254d6305